--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ Automat==0.8.0
 cffi==1.13.2
 channels==2.4.0
 channels-redis==2.4.1
-constantly==15.1.0
+constantly==15.1.0py
 cryptography==2.8
 daphne==2.4.1
 Django==3.0.2
